--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,10 @@
 language: go
 go:
   - 1.6
-  - 1.5.3
-  - 1.4.3
   - tip
 
 sudo: false
 
 install:
   - go get github.com/constabulary/gb/...
-  - gb test
+  - gb build
